src/grammar/document/snapshots/yaml_parser__grammar__document__tests__reserved_directive.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%FOO\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: FOO
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- severity: warning
  message: "unknown directive 'FOO'"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
  stream: FOO
- value:
    explicit: false
    version: ~
    tags: {}

