src/grammar/document/snapshots/yaml_parser__grammar__document__tests__suffix-2.snap
---
source: src/grammar/document/tests.rs
expression: "parse(suffix, \" \")"
---
- value:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 0
      line: 0
      column: 0
- remainder: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1

