src/grammar/document/snapshots/yaml_parser__grammar__document__tests__suffix-5.snap
---
source: src/grammar/document/tests.rs
expression: "parse(suffix, \"...foo\")"
---
- value:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 0
      line: 0
      column: 0
- remainder: "...foo"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 6
      line: 0
      column: 6

