src/grammar/document/snapshots/yaml_parser__grammar__document__tests__suffix-7.snap
---
source: src/grammar/document/tests.rs
expression: "parse(suffix, \"...\")"
---
- token: document_end
  stream: "..."
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- value:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3

