src/grammar/document/snapshots/yaml_parser__grammar__document__tests__suffix-8.snap
---
source: src/grammar/document/tests.rs
expression: "parse(suffix, \"...\\t\")"
---
- token: document_end
  stream: "..."
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: separator
  stream: "\t"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 4
      line: 0
      column: 4
- value:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3

