src/grammar/document/snapshots/yaml_parser__grammar__document__tests__suffix-9.snap
---
source: src/grammar/document/tests.rs
expression: "parse(suffix, \"...\\n\")"
---
- token: document_end
  stream: "..."
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- token: break
  stream: "\n"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 4
      line: 1
      column: 0
- value:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3

